- apply lowerbound provided by pricers already during pricing loop, stop pricing if the lower bound computed by pricing
  already exceeds the cutoff bound
- improved performance of method SCIPsolRetransform() when called during presolving with many aggregations
- minor presolving performance improvements in cons_logicor.c and cons_knapsack.c

interface
- SCIPcalcMIR() gets an additional parameter "cutrank" which returns the rank of the aggregation; via SCIProwChgRank()
  the rank of a cut can be changed (default rank is 0)
- new methods for the SCIP_QUEUE data structure in pub_misc.h, misc.c SCIPqueueCreate(), SCIPqueueFree(),
  SCIPqueueClear(), SCIPqueueInsert(), SCIPqueueRemove(), SCIPqueueFirst(), SCIPqueueIsEmpty(), SCIPqueueNElems()
- added number of constraints which are marked for propagation to callback method consprop
- SCIPcalcMIR() takes an additional parameter sidetypes to determine which side of the rows to use
  (relevant for ranged rows)
- New methods SCIPconshdlrIncNCutsFound(), SCIPsepaIncNCutsFound(), and SCIPsepaIncNCutsFoundAtNode() to increase the
  number of found cuts
- added function SCIPgetFirstLPTime to return the time needed to solve the first LP of the root node
- added SCIPshrinkDisjunctiveVarSet(), which takes an set of variables with corresponding bounds and boundtypes, and
  tries to derive global boundchanges and also to shorten this set of variables by using cliqe, implication and variable
  bound information
- removed all message length parameters in message.c and for printing error messages (not needed anymore)
- new methods SCIPgetFirstLP{Dual/Lower}boundRoot() which return the value of the first LP solved at the root node
- new method SCIPgetNRootFirstLPIterations() which returns the number of LP iterations for the first LP solved at the
  root node
- new section "Root Node" in statistics, listing objective value, iterations and solving time for the first LP solved